--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
                 </div> 
             </div>
         </nav>
+
+
+        <section class="hero">
+            <div class="social">
+                <div><a href="#"><i class="fab fa-linkedin"></i></a></div>
+                <div><a href="#"><i class="fab fa-github"></i></a></div>
+                <div><a href="#"><i class="fab fa-facebook-f"></i></a></div>
+                <div><a href="#"><i class="fab fa-instagram"></i></a></div>
+            </div>
+
+            <div class="cta container">
+                <div class="left-section">
+                    <h1>Space Exploration Technologies Corp. trading as SpaceX, is a private American aerospace
+                        manufacturer headquartered California.</h1>
+                    <button>Explore Space</button>
+                </div>
+                <div class="right-section">
+                    <img src="./img/pranay_astro.png" alt="astronaut">
+                </div>
+            </div>
+        </section>
     </header>
 
 
