--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="brand">
                 <a href="#">
-                    <img src="./img/logo.png"></img>
+                    <img src="./img/pranay-logo.png"></img>
                 </a>
             </div>
 
@@ -38,17 +38,16 @@
 
         <section class="hero">
             <div class="social">
-                <div><a href="#"><i class="fab fa-linkedin"></i></a></div>
-                <div><a href="#"><i class="fab fa-github"></i></a></div>
+                <div><a href="https://www.linkedin.com/in/pranay-bansal-200/" target="_blank"><i class="fab fa-linkedin"></i></a></div>
+                <div><a href="https://github.com/PranayB200" target="_blank"><i class="fab fa-github"></i></a></div>
                 <div><a href="#"><i class="fab fa-facebook-f"></i></a></div>
                 <div><a href="#"><i class="fab fa-instagram"></i></a></div>
             </div>
 
             <div class="cta container">
                 <div class="left-section">
-                    <h1>Space Exploration Technologies Corp. trading as SpaceX, is a private American aerospace
-                        manufacturer headquartered California.</h1>
-                    <button>Explore Space</button>
+                    <h1>Hey There! Welcome to my Space! I am Pranay Bansal, a final year student pursuing my B.Tech. in Computer Engineering at DTU, Delhi. I am a Tech Enthusiast who is keen to learn more and more things in life.</h1>
+                    <button class="btn btn-primary">Know Me!</button>
                 </div>
                 <div class="right-section">
                     <img src="./img/pranay_astro.png" alt="astronaut">
@@ -57,6 +56,147 @@
         </section>
     </header>
 
+    <section class="strip">
+        <h3>Mission Starlink</h3>
+        <button class="btn btn-primary">Join Now</button>
+    </section>
+
+    <section class="rocket container">
+        <div class="left-block">
+            <div class="block">
+                <h1 class="with-underline">FALCON9</h1>
+                <p>Falcon 9 is a two-stage rocket designed and manufactured by SpaceX for the reliable and safe
+                    transport of satellites and the Dragon spacecraft into orbit</p>
+            </div>
+
+            <div class="block dragon">
+                <h2 class="with-underline">DRAGON SPACECRAFT</h2>
+                <p>Dragon carries cargo in the spacecraft’s pressurized capsule and unpressurized trunk, which can also
+                    accommodate secondary payloads. In the future, Dragon will carry astronauts in the pressurized
+                    capsule as well.</p>
+                <button class="btn btn-secondary">LEARN MORE</button>
+            </div>
+
+            <div class="block composite">
+                <h2 class="with-underline">COMPOSITE FAIRING</h2>
+                <p>The payload fairing is for the delivery of satellites to destinations in low Earth orbit (LEO),
+                    geosynchronous transfer orbit (GTO) and beyond.</p>
+                <button class="btn btn-secondary">LEARN MORE</button>
+            </div>
+
+            <div class="block first-stage">
+                <h2 class="with-underline">FIRST STAGE</h2>
+                <p>Falcon 9’s first stage incorporates nine Merlin engines and aluminum-lithium alloy tanks containing
+                    liquid oxygen and rocket-grade kerosene (RP-1) propellant.</p>
+                <button class="btn btn-secondary">LEARN MORE</button>
+            </div>
+
+            <div class="block capacity">
+                <div>
+                    <h4 class="with-underline">ENGINE</h4>
+                    <h6>9</h6>
+                </div>
+                <div>
+                    <h4 class="with-underline">BURNTIME</h4>
+                    <h6>162 <small>SEC</small></h6>
+                </div>
+            </div>
+            <div class="block capacity">
+                <div>
+                    <h4 class="with-underline">Thrust At Sea Level</h4>
+                    <h6>7,607kN1</h6>
+                </div>
+            </div>
+        </div>
+        <div class="rocket-body">
+            <span class="first"><img src="./img/rocket1.png" alt=""></span>
+            <span class="second"><img src="./img/rocket2.png" alt=""></span>
+            <span class="third"><img src="./img/rocket3.png" alt=""></span>
+        </div>
+        
+        <div class="right-block">
+            <div class="floating-graphics">
+                <img src="./img/bus.png">
+            </div>
+            <div class="block payload">
+                <h2>HELLO WORLD!</h2>
+                <p>Falcon 9 is a two-stage rocket designed and manufactured by SpaceX for the reliable and safe
+                    transport of satellites and the Dragon spacecraft into orbit</p>
+            </div>
+            <div class="block second-stage">
+                <h2 class="with-underline">SECOND STAGE</h2>
+                <p>The second stage, powered by a single Merlin vacuum engine, delivers Falcon 9’s payload to the
+                    desired orbit. For maximum reliability, the second stage has redundant igniter systems.</p>
+                <button class="btn btn-secondary">LEARN MORE</button>
+            </div>
+            <div class="block capacity">
+                <div>
+                    <h4 class="with-underline">ENGINE</h4>
+                    <h6>9</h6>
+                </div>
+                <div>
+                    <h4 class="with-underline">BURNTIME</h4>
+                    <h6>162 <small>SEC</small></h6>
+                </div>
+            </div>
+            <div class="block capacity single">
+                <div>
+                    <h4 class="with-underline">Thrust At Sea Level</h4>
+                    <h6>7,607kN1</h6>
+                </div>
+            </div>
+            <div class="block engines">
+                <img src="./img/engines.png" alt="">
+            </div>
+            <div class="block marine">
+                <h2>NINE MARLINE ENGINES</h2>
+                <p>With its nine first-stage Merlin engines clustered together, Falcon 9 can sustain up to two engine
+                    shutdowns during flight and still successfully complete its mission. Falcon 9 is the only launch
+                    vehicle in its class with this key reliability feature.</p>
+            </div>
+        </div>
+        
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="copyright">
+                <div>
+                    <a href="#"><img class="footer-logo" src="./img/logo.png" alt=""></a>
+                </div>
+                <span>&copy; 2020 Rish Design</span>
+            </div>
+            <div>
+                <h1>About us</h1>
+                <ul>
+                    <li><a href="#">WHO WE ARE</a></li>
+                    <li><a href="#">CONTACT US</a></li>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="#">MISSIONS</a></li>
+                    <li><a href="#">OTHER COMPANIES</a></li>
+                </ul>
+            </div>
+            <div>
+                <h1>Company</h1>
+                <ul>
+                    <li><a href="#">CAREERS</a></li>
+                    <li><a href="#">LEGAL</a></li>
+                    <li><a href="#">POLICY</a></li>
+                    <li><a href="#">PRESS</a></li>
+                    <li><a href="#">BLOG</a></li>
+                </ul>
+            </div>
+            <div class="socials">
+                <div class="footer-socials">
+                    <h1>Socials</h1>
+                    <a href="https://www.linkedin.com/in/pranay-bansal-200/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/PranayB200" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="./js/app.js"></script>
 
